sandbox/output
GildedRoseTest.java:292: error: cannot find symbol
            .filter(GildedRose.isSellInGreaterThan10())
                              ^
  symbol:   method isSellInGreaterThan10()
  location: class GildedRose
1 error
